--- a/Cmovies.html
+++ b/Cmovies.html
@@ -15,12 +15,12 @@
     <body> 
       <div class="navbar"> 
         <ul>
-            <li><a href="/aboutus.html"><button>About Us</button></a></li>
+            <li><a href="aboutus.html"><button>About Us</button></a></li>
             <li><a href=""><button>Our Purpose</button> </a> </li>
-            <li><a href="/home.html"><button>Home</button></a></li>
-            <li><a href="/games.html"><button>Games</button></a>
-           <li><a href="/Final_Project.html"> <button>Movies</button></a></li>
-           <li><a href="/addblocker.html"><button>Add Blocker (optional)</button></a></li>
+            <li><a href="home.html"><button>Home</button></a></li>
+            <li><a href="games.html"><button>Games</button></a>
+           <li><a href="Final_Project.html"> <button>Movies</button></a></li>
+           <li><a href="addblocker.html"><button>Add Blocker (optional)</button></a></li>
            </ul>
            </div>
             <link href="home.css" rel="stylesheet"/>
