--- a/games.html
+++ b/games.html
@@ -12,11 +12,11 @@
     <body>
         <div class="navbar"> 
             <ul>
-                <li><a href="http://127.0.0.1:5500/Random_Fun/aboutus.html"><button>About Us</button></a></li>
+                <li><a href="aboutus.html"><button>About Us</button></a></li>
                
-                <li><a href="http://127.0.0.1:5500/Random_Fun/home.html"><button>Home</button></a></li>
-                <li><a href="http://127.0.0.1:5500/Random_Fun/Final_Project.html"><button>Games</button></a>
-                    <li><a href="http://127.0.0.1:5500/Random_Fun/Final_Project.html"> <button>Movies</button></a></li>
+                <li><a href="home.html"><button>Home</button></a></li>
+                <li><a href="Final_Project.html"><button>Games</button></a>
+                    <li><a href="Final_Project.html"> <button>Movies</button></a></li>
                </ul>
                </div>
                 <link href="home.css" rel="stylesheet"/>
